# cartoncaps-chat-poc

./: README.md
backend/: README.md  cartoncaps.sqlite  pyproject.toml  setup_env.py
backend/app/: crud.py  database.py  main.py  models.py
backend/app/agents/: prompts.py  react_agent.py  sql_agent.py  tools.py
backend/app/routes/: chat.py
backend/tests/: test_concurrent_requests.py  test_context_continuity_tool_description.py
frontend/: .env  README.md  nuxt.config.ts  package.json
frontend/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt-icon-server-bundle.mjs  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
frontend/.nuxt/dev/: index.mjs  index.mjs.map
frontend/.nuxt/manifest/: latest.json
frontend/.nuxt/manifest/meta/: dev.json
frontend/.nuxt/tailwind/: postcss.mjs
frontend/.nuxt/types/: build.d.ts  imports.d.ts  nitro-imports.d.ts  schema.d.ts
frontend/components/: Header.vue
frontend/composables/: useApi.ts  useHeaderDropdown.ts  useUsers.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/types/: ChatMessage.ts  HelloMessage.ts  User.ts
